--- a/heraldodetoluca/stylus/main.styl
+++ b/heraldodetoluca/stylus/main.styl
@@ -87,6 +87,53 @@ nav
 		position absolute
 		right 0px
 
+#minuto-a-minuto
+	border-top 1px solid color_azul
+	margin-top 10px
+	overflow hidden
+	& h2.titulo
+		font-size 16px 
+		text-transform uppercase
+		line-height 30px
+		vertical-align middle
+		overflow hidden
+		border-bottom 1px solid color_azul
+		color white
+		background color_azul
+		padding-left 20px
+	& ul
+		margin 0
+		padding 0
+	& li
+		list-style none
+		border-bottom 1px dotted gray
+		padding 10px 0px
+		font-size 14px
+		& .tiempo
+		& .contenido
+			display inline-block
+			vertical-align middle
+		& .tiempo
+			width 45px
+			background silver
+			color blue
+			padding 3px
+			position relative
+			text-align center
+			&:after
+				content ""
+				display block
+				border-left 7px solid silver
+				border-top 12px solid transparent
+				border-bottom 12px solid transparent
+				position absolute 
+				right -7px
+				top -1px
+		& .contenido 
+			width 225px
+			margin-left 20px
+			
+
 .columna-2
 .columna-1
 	display inline-block
@@ -319,21 +366,39 @@ nav
 	line-height 30px
 	vertical-align middle
 	overflow hidden
+	border-bottom 1px solid color_azul
+	color white
+	background color_azul
+	padding-left 20px
 	& .tab
-		background color_azul
-		border-bottom 3px solid color_azul
+		background white
+		border-bottom 3px solid white
 		color white
 		height 30px
-		padding 5px
+		padding 10px 7px
 		cursor pointer
 		display block
 		float right
-		min-width 50px
+		min-width 70px
 		box-sizing border-box
+		color color_azul
+		border-top 1px solid color_azul
+		border-right 1px solid color_azul
+		line-height 10px
+		font-size 12px
+		text-align center
 		&.active
-			background white
-			color color_azul
+			border-bottom 3px solid color_azul
 		
+.control-lomas
+	float right
+	background transparent
+	font-size 14px
+	padding 3px 5px
+	color gray
+	border 1px solid gray
+	border-radius 5px
+	min-width 200px
 		
 			
 .publicidad
@@ -364,8 +429,66 @@ nav
 		background color_azul
 		border none
 		
+.ediciones-pdf
+	background black
+	color white
+	height 60px
+	margin-top 10px
+	padding 20px 0px
+	text-transform uppercase
+	& .titulo
+		border-bottom 1px dotted color_azul
+		border-top 1px dotted color_azul
+		box-sizing border-box
+		height 60px
+		line-height 30px
+		margin 0
+		padding 15px 20px
 
+.contenedor-galeria
+	height 120px
+	margin-top 10px
+	min-width 300px
+	overflow hidden
+	position relative
+	
+.galeria-pdf
+	left 0px
+	margin 0
+	min-width 900px
+	padding 0
+	position absolute
+	top 0px
+	z-index 500
 
+.edicion-pdf
+	float left
+	height 120px
+	list-style none
+	width 300px
+	& figure
+	& .contenido
+		display inline-block
+		vertical-align middle
+
+.control
+	background gray
+	border-radius 50%
+	color white
+	display block
+	height 30px
+	line-height 30px
+	margin-top -15px
+	position absolute
+	top 50%
+	width 30px
+	z-index 1000
+	text-align center
+	cursor pointer
+	&.izquierdo
+		left 0px
+	&.derecho 
+		right 0px
 
 .redes-sociales span
 	display inline-block
