--- a/mejorfront/stylus/main.styl
+++ b/mejorfront/stylus/main.styl
@@ -1,7 +1,10 @@
+@import 'nib'
+
 @import 'normalize.styl'
 
 @import 'fonts.styl'
 
+vendor-prefixes = webkit moz ms o official richpolis
 
 
 gris_oscuro = #333333
@@ -130,21 +133,35 @@ ul
 		margin 0 auto 
 		
 	.state
-		height 5px 
+		animation 10s state infinite linear
 		background rojo 
-		width 30% 
 		border-radius 5px
+		height 5px 
 		position relative 
+		width 30% 
 		
 	.circle
+		animation 1s circle infinite
 		background gris_oscuro 
-		height 10px 
-		width 10px 
 		border-radius 50%
+		height 10px 
 		position absolute 
 		right 0 
 		top -2px 
+		width 10px 
 		
+@keyframes state
+	0%
+		width 0
+	100%
+		width 100%
+		
+@keyframes circle
+	0%
+		transform scale(1)
+	100% 
+		transform scale(2)
+		opacity 0
 
 .header
 	height 3.5em
@@ -171,6 +188,7 @@ ul
 .playing
 	&.small
 		width 20em
+		margin 0 auto
 		
 .input
 	border 1px solid gris_claro
@@ -191,6 +209,13 @@ ul
 	right .5em
 	top .5em
 
+.playlist
+	display none
+
+.logo
+	display none
+
+
 @media screen and (min-width: 480px)
 	.song
 		&:ntd-child(even)
@@ -206,6 +231,29 @@ ul
 @media screen and (min-width: 1000px)
 	body
 		background gris_mas_claro
+	.music
+		width 32.5em
+		float left
+		.description
+			display none
+	.playing
+		padding-top 1.3em
+		&.large
+			margin 0 auto
+			width 62.5em
+			overflow hidden
+	.playlist
+		width 22em
+		padding 0 2em
+		border-left 1px solid gris_claro
+		display block
+		.list
+			list-style none
+		.item
+			padding 1em 0
+		.action
+			font-size 14px
+		
 	.menu
 		background gris_mas_claro
 		display block
@@ -236,6 +284,7 @@ ul
 		background white
 		overflow hidden
 		padding 1.3em 0
+		display block
 	.avatar
 		height 38px
 		width 38px
